plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.hontail'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Spring Security & OAuth2
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'


    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'


    // Database
    implementation 'com.mysql:mysql-connector-j'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'org.springframework.boot:spring-boot-starter-validation'


    // OpenAI GPT API 클라이언트 라이브러리
    implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'

    //.env 파일 지원 라이브러리
    // - 환경 변수를 .env 파일에서 관리
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'

    // OpenAI GPT API 클라이언트 라이브러리
    implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'

    //.env 파일 지원 라이브러리
    // - 환경 변수를 .env 파일에서 관리
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
    
    // aws s3 연동
    implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.3.0'

    implementation 'software.amazon.awssdk:s3:2.30.11'

    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    // Querydsl 추가
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
}

//tasks.named('test') {
//    useJUnitPlatform()
//}

// 환경 변수 로드 설정
bootRun {
    doFirst {
        File envFile = new File('.env')
        if (envFile.exists()) {
            envFile.readLines().each { String line ->
                if (line.trim() && !line.startsWith('#')) {
                    String[] parts = line.split('=', 2)
                    if (parts.length == 2) {
                        systemProperty parts[0], parts[1]
                    }
                }
            }
        }
    }
}